-- Table Independente: bursa, companie, moneda, investitor

/*
Obs: VARCHAR2 este tipul de date default pentru string in Oracle DB
Obs: int AUTO_INCREMENT PRIMARY KEY nu merge in Oracle, 
     trebuie folosit NUMBER GENERATED BY DEFAULT AS IDENTITY
Conform cerintei 11, nr. inregistrari trebuie sa fie in [10, 30] pentru fiecare tabel non asociativ
*/

-- -- DROP ALL TABLES
-- DROP TABLE bursa CASCADE CONSTRAINTS;
-- DROP TABLE companie CASCADE CONSTRAINTS;
-- DROP TABLE moneda CASCADE CONSTRAINTS;
-- DROP TABLE investitor CASCADE CONSTRAINTS;

-- Tabel "01: bursa"
CREATE TABLE bursa (
   id_bursa NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   cod_bursa VARCHAR2(10) UNIQUE NOT NULL,
   denumire VARCHAR2(100) NOT NULL,
   tara VARCHAR2(50) NOT NULL
);
DELETE FROM bursa;

-- or: INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('NYSE', 'New York Stock Exchange', 'Statele Unite ale Americii');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('NYSE', 'New York Stock Exchange', 'Statele Unite ale Americii');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('NASDAQ', 'Nasdaq', 'Statele Unite ale Americii');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('TSE', 'Tokyo Stock Exchange', 'Japonia');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('EURONEXT', 'Euronext', 'Europa (Multi-stat)');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('KRX', 'Korea Exchange', 'Coreea de Sud');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('TWSE', 'Taiwan Stock Exchange', 'Taiwan');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('LSE', 'London Stock Exchange', 'Marea Britanie');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('FSE', 'Frankfurt Stock Exchange', 'Germania');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('SIX', 'SIX Swiss Exchange', 'Elvetia');
INSERT INTO bursa (cod_bursa, denumire, tara) VALUES ('SSE', 'Shanghai Stock Exchange', 'China');
COMMIT;


-- Tabel "05: companie"
CREATE TABLE companie (
   id_companie NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   denumire VARCHAR2(120) NOT NULL,
   cod_fiscal VARCHAR2(20) UNIQUE NOT NULL,
   tara_origine VARCHAR2(50) NOT NULL,
   data_listare DATE
);
DELETE FROM companie;

INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Banca Transilvania', 'RO5022670', 'Romania', TO_DATE('1997-10-15', 'YYYY-MM-DD'));
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('NVIDIA', 'US943216590', 'SUA', TO_DATE('1999-01-22', 'YYYY-MM-DD'));
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Allianz Group', 'DE123456789', 'Germania', TO_DATE('2000-11-23', 'YYYY-MM-DD'));
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Novo Nordisk', 'DK24256790', 'Danemarca', TO_DATE('1981-04-09', 'YYYY-MM-DD'));
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Apple', 'US942404110', 'SUA', TO_DATE('1980-12-12', 'YYYY-MM-DD'));
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Google', 'US_goog', 'SUA', TO_DATE('1981-12-12', 'YYYY-MM-DD'));  -- umplutura
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Microsoft', 'US_msft', 'SUA', TO_DATE('1986-03-13', 'YYYY-MM-DD')); -- umplutura
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Amazon', 'US_amazn', 'SUA', TO_DATE('1997-05-15', 'YYYY-MM-DD')); -- umplutura
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Facebook', 'US_fb', 'SUA', TO_DATE('2012-05-18', 'YYYY-MM-DD')); -- umplutura
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Tesla', 'US_tsla', 'SUA', TO_DATE('2010-06-29', 'YYYY-MM-DD')); -- umplutura
INSERT INTO companie (denumire, cod_fiscal, tara_origine, data_listare) VALUES ('Netflix', 'US_nflx', 'SUA', TO_DATE('2002-05-23', 'YYYY-MM-DD')); -- umplutura

COMMIT;


-- Tabel "02: moneda"
CREATE TABLE moneda (
   cod_moneda VARCHAR2(10) PRIMARY KEY NOT NULL,
   denumire VARCHAR2(50) NOT NULL
);
DELETE FROM moneda;

INSERT INTO moneda (cod_moneda, denumire) VALUES ('RON', 'Leu romanesc');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('USD', 'Dolar american');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('EUR', 'Euro');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('DKK', 'Coroana daneza');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('JPY', 'Yen japonez');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('GBP', 'Lira sterlina');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('CHF', 'Franc elvetian');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('KRW', 'Won sud-coreean');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('TWD', 'Dolar taiwanez');
INSERT INTO moneda (cod_moneda, denumire) VALUES ('CNY', 'Yuan chinezesc');
COMMIT;

-- Tabel "06: investitor"
CREATE TABLE investitor (
   id_investitor NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   nume VARCHAR2(50) NOT NULL,
   prenume VARCHAR2(50) NOT NULL,
   email VARCHAR2(120) UNIQUE NOT NULL,
   data_inregistrare DATE NOT NULL
);
DELETE FROM investitor;

INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Nicolescu', 'Sorina', 'sorina.nicolescu@example.com', TO_DATE('2013-10-18', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Ionescu', 'Constantin', 'constantin.Ionescu@example.com', TO_DATE('2015-08-23', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Avram', 'Laurentiu', 'laurentiu.avram@example.com', TO_DATE('2018-10-12', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Iordache', 'Ioana', 'ioana.iordache@example.com', TO_DATE('2013-06-08', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Satmareanu', 'Milena', 'milena.satmareanu@example.com', TO_DATE('2015-07-24', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Hodos', 'Laura', 'laura.hodos@example.com', TO_DATE('2018-07-15', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Oancea', 'Banel', 'banel.oancea@example.com', TO_DATE('2019-05-25', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Frentiu', 'Timotei', 'timotei.frentiu@example.com', TO_DATE('2016-08-09', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Lazarescu', 'Hubert', 'hubert.lazarescu@example.com', TO_DATE('2011-10-15', 'YYYY-MM-DD'));
INSERT INTO investitor (nume, prenume, email, data_inregistrare) VALUES ('Adina', 'Elvira', 'elvira.adina@example.com', TO_DATE('2021-12-10', 'YYYY-MM-DD'));
COMMIT;