/*
Tablele care depind de faza 1 si 2

Cerinta 11: Crearea tabelelor în SQL și inserarea de date coerente în fiecare dintre acestea: 
   - minimum 5 înregistrări în fiecare tabel neasociativ; 
   - minimum 10 înregistrări în tabelele asociative; 
   - maxim 30 de înregistrări în fiecare tabel 

Tabele: curs_valutar
*/

-- Tabel "03: curs_valutar"
CREATE TABLE curs_valutar (
   id_curs NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   cod_moneda_sursa VARCHAR2(10) NOT NULL,
   cod_moneda_destinatie VARCHAR2(10) NOT NULL,
   data_curs DATE NOT NULL,
   valoare_curs NUMBER(18, 6) NOT NULL CHECK (valoare_curs > 0),

   CONSTRAINT fk_curs_moneda_sursa
      FOREIGN KEY (cod_moneda_sursa)
      REFERENCES moneda (cod_moneda),
   
   CONSTRAINT fk_curs_moneda_destinatie
      FOREIGN KEY (cod_moneda_destinatie)
      REFERENCES moneda (cod_moneda)
);
DELETE FROM curs_valutar;
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('DKK', 'CHF', TO_DATE('2026-05-18', 'YYYY-MM-DD'), 0.1223360002040863);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('KRW', 'CNY', TO_DATE('2026-05-18', 'YYYY-MM-DD'), 0.004544000141322613);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('JPY', 'DKK', TO_DATE('2026-05-18', 'YYYY-MM-DD'), 0.04030900076031685);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('CNY', 'EUR', TO_DATE('2026-05-11', 'YYYY-MM-DD'), 0.12495800107717514);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('USD', 'GBP', TO_DATE('2026-05-16', 'YYYY-MM-DD'), 0.746749997138977);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('TWD', 'JPY', TO_DATE('2026-05-10', 'YYYY-MM-DD'), 4.995751857757568);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('CHF', 'KRW', TO_DATE('2026-05-02', 'YYYY-MM-DD'), 1885.8875732421875);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('GBP', 'RON', TO_DATE('2026-05-13', 'YYYY-MM-DD'), 5.993503093719482);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('EUR', 'TWD', TO_DATE('2026-05-10', 'YYYY-MM-DD'), 36.808895111083984);
INSERT INTO curs_valutar (cod_moneda_sursa, cod_moneda_destinatie, data_curs, valoare_curs) VALUES ('RON', 'USD', TO_DATE('2026-05-18', 'YYYY-MM-DD'), 0.22329901158809662);
COMMIT;


-- Tabel "08: detinere portofoliu"
