/*
Cerinta 11: Crearea tabelelor în SQL și inserarea de date coerente în fiecare dintre acestea: 
   - minimum 5 înregistrări în fiecare tabel neasociativ; 
   - minimum 10 înregistrări în tabelele asociative; 
   - maxim 30 de înregistrări în fiecare tabel 
*/


/*
- 11: **executie_ordin**
   - `id_executie` # (Primary Key)
   - `id_ordin` (Foreign Key -> ordin.id_ordin, NOT NULL)
   - `id_bursa` (Foreign Key -> bursa.id_bursa, NOT NULL)
   - `cantitate_executata` (NUMBER(14,4), NOT NULL, CHECK (cantitate_executata > 0))
   - `pret_executie` (NUMBER(14,4), NOT NULL, CHECK (pret_executie > 0))
   - `data_executie` (DATE, NOT NULL)
*/
CREATE TABLE executie_ordin (
   id_executie NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, 
   id_ordin NUMBER NOT NULL,
   id_bursa NUMBER NOT NULL,
   cantitate_executata NUMBER(14,4) NOT NULL CHECK (cantitate_executata > 0),
   pret_executie NUMBER(14,4) NOT NULL CHECK (pret_executie > 0),
   data_executie DATE NOT NULL,

   CONSTRAINT fk_executie_ordin_id_ordin
      FOREIGN KEY (id_ordin)
      REFERENCES ordin(id_ordin),

   CONSTRAINT fk_executie_ordin_id_bursa
      FOREIGN KEY (id_bursa)
      REFERENCES bursa(id_bursa)
)
DELETE FROM executie_ordin;
COMMIT;


/*
Tabel 08: **detinere_portofoliu** (*tabel asociativ*)
   - `id_portofoliu` (Foreign Key -> portofoliu.id_portofoliu)
   - `ticker` (Foreign Key -> simbol_bursier.ticker)
   - `cantitate` (NUMBER(14,4), NOT NULL, CHECK (cantitate >= 0))
   - `pret_mediu` (NUMBER(14,4), CHECK (pret_mediu >= 0))
   - `data_actualizare` (DATE, DEFAULT SYSDATE)
   - Primary Key compus: # (`id_portofoliu`, `ticker`)
*/

CREATE TABLE detinere_portofoliu (
   id_portofoliu NUMBER NOT NULL, -- portofoliu.id_portofoliu
   ticker VARCHAR2(10) NOT NULL, -- simbol_bursier.ticker
   cantitate NUMBER(14,4) NOT NULL CHECK (cantitate >= 0),
   pret_mediu NUMBER(14,4) NOT NULL CHECK (pret_mediu >= 0),
   data_actualizare DATE DEFAULT SYSDATE,

   -- primary key compus din id_portofoliu + ticker
   CONSTRAINT pk_detinere_portofoliu PRIMARY KEY (id_portofoliu, ticker),

   CONSTRAINT fk_detinere_portofoliu_id_portofoliu
      FOREIGN KEY (id_portofoliu)
      REFERENCES portofoliu (id_portofoliu),

   CONSTRAINT fk_detinere_portofoliu_ticker
      FOREIGN KEY (ticker)
      REFERENCES simbol_bursier (ticker)
);
DELETE FROM detinere_portofoliu;
-- TODO: insert statements
COMMIT;