/*
Cerinta 11: Crearea tabelelor in SQL si inserarea de date coerente in fiecare dintre acestea:
   - minimum 5 inregistrari in fiecare tabel neasociativ;
   - minimum 10 inregistrari in tabelele asociative;
   - maxim 30 de inregistrari in fiecare tabel

Faza 5: tranzactie_numerar
*/


-- CLEANUP
DROP TABLE tranzactie_numerar CASCADE CONSTRAINTS;


/*
- 12: tranzactie_numerar
   - id_tranzactie # (Primary Key)
   - id_portofoliu (Foreign Key -> portofoliu.id_portofoliu, NOT NULL)
   - cod_moneda (Foreign Key -> moneda.cod_moneda, NOT NULL)
   - tip_miscare (VARCHAR2(15), CHECK (tip_miscare IN ('DEPOZIT','RETRAGERE','COMISION','DIVIDEND')))
   - suma (NUMBER(14,2), NOT NULL, CHECK (suma > 0))
   - data_tranzactie (DATE, DEFAULT SYSDATE)
*/
CREATE TABLE tranzactie_numerar (
   id_tranzactie NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
   id_portofoliu NUMBER NOT NULL,
   cod_moneda VARCHAR2(10) NOT NULL,
   tip_miscare VARCHAR2(15) NOT NULL CHECK (tip_miscare IN ('DEPOZIT','RETRAGERE','COMISION','DIVIDEND')),
   suma NUMBER(14,2) NOT NULL CHECK (suma > 0),
   data_tranzactie DATE DEFAULT SYSDATE,

   CONSTRAINT fk_tranzactie_portofoliu
      FOREIGN KEY (id_portofoliu)
      REFERENCES portofoliu(id_portofoliu),

   CONSTRAINT fk_tranzactie_moneda
      FOREIGN KEY (cod_moneda)
      REFERENCES moneda(cod_moneda)
);

DELETE FROM tranzactie_numerar;

INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (3, 'CHF', 'DEPOZIT', 20144.61, TO_DATE('2026-02-17', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (1, 'TWD', 'COMISION', 126.64, TO_DATE('2026-02-25', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (2, 'CHF', 'DIVIDEND', 890.47, TO_DATE('2026-02-23', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (5, 'USD', 'DEPOZIT', 22150.53, TO_DATE('2026-03-12', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (2, 'CHF', 'DEPOZIT', 6245.27, TO_DATE('2026-05-03', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (4, 'RON', 'DEPOZIT', 22804.75, TO_DATE('2026-01-16', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (3, 'USD', 'COMISION', 81.44, TO_DATE('2026-04-22', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (5, 'KRW', 'DEPOZIT', 11789.11, TO_DATE('2026-04-10', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (2, 'DKK', 'DEPOZIT', 19244.12, TO_DATE('2026-03-23', 'YYYY-MM-DD'));
INSERT INTO tranzactie_numerar (id_portofoliu, cod_moneda, tip_miscare, suma, data_tranzactie) VALUES (2, 'TWD', 'COMISION', 41.84, TO_DATE('2026-04-11', 'YYYY-MM-DD'));
COMMIT;
